--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/HarmonicGenerator/HarmonicGenerator - heychat.cpp
+/HarmonicGenerator/HarmonicGenerator - giga.cpp
+/HarmonicGenerator/HarmonicGenerator - Copy.cpp
